--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 serde = "1.0.106"
 serde_json = "1.0.51"
 serde_derive = "1.0.106"
+domain_derive = "0.2.137"
+domain_patterns = "0.2.141"
