--- a/share-it-core/Cargo.toml
+++ b/share-it-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "share-it"
+name = "share-it-core"
 version = "0.1.0"
 authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
 edition = "2018"
@@ -13,4 +13,3 @@ serde_derive = "1.0.106"
 rusty_ulid = "0.9.3"
 mysql = "16.1.0"
 lazy_static = "1.4.0"
-actix-web = "2.0.0"
