--- a/share-it-api/Cargo.toml
+++ b/share-it-api/Cargo.toml
@@ -8,4 +8,11 @@ edition = "2018"
 
 [dependencies]
 actix-web = "2.0.0"
+actix-rt = "1.0.0"
+actix-session = "0.3.0"
+
 dotenv = "0.15.0"
+oauth2 = "3.0.0-alpha.9"
+serde = { version = "1.0", features = ["derive"] }
+
+# vimeo-rs = { git = "https://github.com/libellis/vimeo-rs.git" }
